# sem5-cmpmath

./: .gitignore  pyproject.toml
labs/: 10.py  11.py  12.py  13.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  curs.ipynb  funcs.py  l10.py  l11.py  l12.py  l13.py  l2.py  l3.py  l4.py  l5.py  l6.py  l7.py  l8.py  l9.py  output.txt  str_iter.py
