[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["poslam <kirden04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
sympy = "^1.13.3"
tabulate = "^0.9.0"
isort = "^5.13.2"
black = {extras = ["jupyter"], version = "^24.10.0"}
ipykernel = "^6.29.5"
matplotlib = "^3.9.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
